Revert "Update .env and .env_answers with sensitive information guidelines; enhance db.js comments for clarity"
This reverts commit b758e5232332978aed7892e8a2210a6486c5972e.

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Question: Quelles sont les informations sensibles à ne jamais commiter ?
-# Réponse : les infomations d'authentification dans les services telle que les bases des données les mots de passes et les clées tq les clées d'authentification et des services
+# Réponse : 
 # Question: Pourquoi utiliser des variables d'environnement ?
-# Réponse : pour conserver les données sensibles localement sans les pousser vers Github par exemple ainsi que les adapter selon l'utilisateur et la machine .
+# Réponse : 
 
 MONGODB_URI=mongodb://localhost:27017
 MONGODB_DB_NAME=learning_platform
